--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Form Submission</title>
   </head>
   <body>
-    <h1>Submit your info</h1>
-    <form action="http://localhost:8080" method="POST">
+    <h1>Register</h1>
+    <form action="http://localhost:8080/register" method="POST">
+      <label for="name">Name:</label><br />
+      <input type="text" id="name" name="name" /><br /><br />
+
+      <label for="email">Birthday:</label><br />
+      <input type="text" id="birthday" name="birthday" /><br /><br />
+
+      <label for="phone">Origin:</label><br />
+      <input type="text" id="origin" name="origin" /><br /><br />
+
+      <input type="submit" value="Submit" />
+    </form>
+
+    <h1>Book</h1>
+    <form action="http://localhost:8080/book" method="POST">
       <label for="name">Name:</label><br />
       <input type="text" id="name" name="name" /><br /><br />
 
